Sutter Health/src/objects/Manager_Feedback_Comment__c.object
<CustomObject>
    <description>Manager Feedback Comment object for manager feedback comments.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managers_Feedback__c</fullName>
        <label>Managers Feedback</label>
        <referenceTo>Managers_Feedback__c</referenceTo>
        <relationshipLabel>Manager Feedback Comments</relationshipLabel>
        <relationshipName>CommentsRel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NotificationEmailTo__c</fullName>
        <label>NotificationEmailTo</label>
        <type>Email</type>
    </fields>
    <label>Manager Feedback Comment</label>
    <nameField>
        <displayFormat>MFC-{0000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manager Feedback Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Comment_can_not_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Comments__c )</errorConditionFormula>
        <errorMessage>Comments can not be empty.</errorMessage>
    </validationRules>
</CustomObject>